--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "peerDependencies": {
-    "react": ">=16"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -48,9 +45,14 @@
       "limit": "10 KB"
     }
   ],
+  "peerDependencies": {
+    "react": ">=16",
+    "react-dom": ">=16",
+    "react-three-fiber": "*",
+    "three": "*"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@react-icons/all-files": "^4.1.0",
     "@size-limit/preset-small-lib": "^4.9.1",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-info": "^5.3.21",
@@ -61,20 +63,21 @@
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "husky": "^4.3.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
-    "react-three-fiber": "^5.3.10",
     "rollup-plugin-postcss": "^4.0.0",
     "size-limit": "^4.9.1",
-    "three": "^0.124.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3",
     "utility-types": "^3.10.0",
-    "zustand": "^3.2.0"
+    "postcss": "^8.2.2",
+    "zustand": "^3.2.0",
+    "three": "^0.124.0",
+    "react-three-fiber": "^5.3.10",
+    "@react-icons/all-files": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "postcss": "^8.2.2"
   }
 }
