--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "NODE_ENV=development parcel build index.html"
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0"
