--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@react-icons/all-files": "^4.1.0",
     "@size-limit/preset-small-lib": "^4.9.1",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-info": "^5.3.21",
@@ -81,8 +80,10 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3",
-    "utility-types": "^3.10.0",
-    "zustand": "^3.2.0"
+    "utility-types": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "zustand": "^3.2.0"
+  }
 }
