--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,9 @@
     "build": "NODE_ENV=development parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "@react-three/drei": "^2.2.14",
+    "react-app-polyfill": "^1.0.0",
+    "react-postprocessing": "^1.4.0"
   },
   "alias": {
     "react": "../node_modules/react",
