--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,10 @@
     "build": "NODE_ENV=development parcel build index.html"
   },
   "dependencies": {
-    "@react-three/drei": "^2.2.14",
     "react": ">= 16.8.0",
     "react-app-polyfill": "^1.0.0",
     "react-postprocessing": "^1.4.0",
+    "three-stdlib": "^0.0.14",
     "tweakpane": "^1.5.6",
     "use-tweaks": "^0.3.1"
   },
