--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-three-fiber": "^5.3.18",
     "rollup-plugin-postcss": "^4.0.0",
     "size-limit": "^4.9.2",
-    "three": "^0.125.2",
+    "three": "^0.126.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5",
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@types/three": "^0.125.3",
     "lerp": "^1.0.3",
     "zustand": "^3.3.3"
   }
