--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "version": "1.0.0-beta.3",
   "license": "MIT",
-  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "sideEffects": false,
   "engines": {
     "node": ">=10"
   },
@@ -53,6 +56,11 @@
     "react-dom": ">=16",
     "three": "*"
   },
+  "peerDependenciesMeta": {
+    "react-dom": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.12.17",
     "@size-limit/preset-small-lib": "^4.9.2",
@@ -76,7 +84,6 @@
     "utility-types": "^3.10.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
     "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^6.0.0-alpha.14",
     "@types/three": "^0.126.2",
