--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dist",
     "src"
   ],
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.cjs.js",
+  "module": "index.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "engines": {
     "node": ">=10"
