--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "version": "1.0.0-beta.7",
   "license": "MIT",
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "sideEffects": false,
+  "files": [
+    "dist",
+    "src"
+  ],
   "engines": {
     "node": ">=10"
   },
@@ -52,14 +53,8 @@
     "react-dom": ">=16",
     "three": "*"
   },
-  "peerDependenciesMeta": {
-    "react-dom": {
-      "optional": true
-    }
-  },
   "devDependencies": {
     "@babel/core": "^7.12.17",
-    "@react-three/drei": "^4.0.0-beta.7",
     "@size-limit/preset-small-lib": "^4.9.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -82,6 +77,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-three/drei": "^3.11.2",
     "@react-three/fiber": "^6.0.0-alpha.14",
     "@types/three": "^0.126.2",
     "lerp": "^1.0.3",
