--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "dist",
     "src"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
     "start": "tsdx watch",
     "build": "NODE_ENV=production tsdx build --format cjs",
@@ -48,6 +45,7 @@
     }
   },
   "peerDependencies": {
+    "@react-three/drei": "*",
     "@react-three/fiber": "*",
     "react": ">=16",
     "react-dom": ">=16",
@@ -55,6 +53,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
+    "@react-three/drei": "^4.0.0-beta.7",
     "@size-limit/preset-small-lib": "^4.9.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -77,7 +76,6 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/drei": "^3.11.2",
     "@react-three/fiber": "^6.0.0-alpha.14",
     "@types/three": "^0.126.2",
     "lerp": "^1.0.3",
