--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/fiber": "^6.0.0-alpha.14",
+    "@react-three/fiber": "6.0.0-alpha.11",
     "@types/three": "^0.126.2",
     "lerp": "^1.0.3",
     "zustand": "^3.3.3"
