--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "scripts": {
+    "symlink": "yarn workspace r3f-perf yalc publish && yarn workspace demo yalc link r3f-perf",
     "postinstall": "patch-package && preconstruct dev",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
@@ -55,7 +56,7 @@
     "@changesets/cli": "^2.14.1",
     "@preconstruct/cli": "^2.0.6",
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/fiber": "6.0.0-alpha.13",
+    "@react-three/fiber": "alpha",
     "@size-limit/preset-big-lib": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -88,7 +89,8 @@
     "size-limit": "^4.10.1",
     "start-server-and-test": "^1.12.1",
     "tsd": "^0.14.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "yalc": "^1.0.0-pre.50"
   },
   "prettier": {
     "semi": false,
@@ -97,5 +99,9 @@
     "jsxBracketSameLine": true,
     "tabWidth": 2,
     "printWidth": 120
+  },
+  "resolutions": {
+    "@r3f-perf/root": "portal:/Users/yakuno/Projects/leva",
+    "demo": "portal:/Users/yakuno/Projects/leva/demo"
   }
 }
