--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -22,20 +22,11 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@radix-ui/react-portal": "^0.0.6",
-    "@radix-ui/react-tooltip": "0.0.9",
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/fiber": "6.0.0-alpha.13",
-    "@stitches/react": "^0.1.0",
-    "@welldone-software/why-did-you-render": "^6.1.1",
-    "clipboard-polyfill": "^3.0.2",
-    "dequal": "^2.0.2",
-    "merge-value": "^1.0.0",
-    "react-colorful": "^5.0.1",
-    "react-dropzone": "^11.3.1",
-    "react-use-gesture": "^9.1.3",
-    "tinycolor2": "^1.4.2",
-    "v8n": "^1.3.3",
+    "@react-three/fiber": "^6.0.0-alpha.14",
+    "@types/three": "^0.126.2",
+    "lerp": "^1.0.3",
+    "styled-components": "^5.2.1",
     "zustand": "^3.3.3"
   }
 }
