--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -28,5 +28,8 @@
     "lerp": "^1.0.3",
     "styled-components": "^5.2.1",
     "zustand": "^3.3.3"
+  },
+  "devDependencies": {
+    "yalc": "^1.0.0-pre.50"
   }
 }
