--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     {
       "name": "Perf",
       "limit": "3s",
-      "path": "packages/r3f-perf/dist/r3f-perf.*.prod.js"
+      "path": "packages/r3f-perf/dist/r3f-perf.*.js"
     }
   ],
   "repository": {
@@ -64,6 +64,7 @@
     "@storybook/addon-storysource": "^6.1.21",
     "@storybook/react": "^6.1.21",
     "@testing-library/cypress": "^7.0.4",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/tinycolor2": "^1.4.2",
