--- a/demo/package.json
+++ b/demo/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/drei": "beta",
-    "@react-three/fiber": "alpha",
+    "@react-three/drei": "^4.0.1",
+    "@react-three/fiber": "^6.0.1",
     "@stitches/react": "^0.1.0",
     "leva": "^0.8.1",
     "noisejs": "^2.1.0",
-    "r3f-perf": "beta",
+    "r3f-perf": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "^0.126.1",
