--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "react-dom": "../node_modules/react-dom/profiling"
   },
   "devDependencies": {
+    "@react-three/fiber": "^6.0.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
     "parcel": "^1.12.3",
