--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   },
   "bugs": "https://github.com/RenaudRohlinger/r3f-perf/issues",
   "peerDependencies": {
-    "@react-three/fiber": "*",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "three": "*"
@@ -48,7 +47,6 @@
     "@changesets/cli": "^2.14.1",
     "@preconstruct/cli": "^2.0.6",
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/fiber": "alpha",
     "@size-limit/preset-big-lib": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -96,5 +94,8 @@
   "resolutions": {
     "@r3f-perf/root": "portal:/Users/yakuno/Projects/r3f-perf",
     "demo": "portal:demo"
+  },
+  "dependencies": {
+    "@react-three/fiber": "^6.0.1"
   }
 }
