--- a/demo/package.json
+++ b/demo/package.json
@@ -14,7 +14,7 @@
     "@stitches/react": "^0.1.0",
     "leva": "^0.8.1",
     "noisejs": "^2.1.0",
-    "r3f-perf": "*",
+    "r3f-perf": "workspace:packages/r3f-perf",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "^0.126.1",
