--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@changesets/cli": "^2.14.1",
     "@preconstruct/cli": "^2.0.6",
     "@radix-ui/react-icons": "^1.0.2",
+    "@react-three/fiber": "^6.0.1",
     "@size-limit/preset-big-lib": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -94,8 +95,5 @@
   "resolutions": {
     "@r3f-perf/root": "portal:/Users/yakuno/Projects/r3f-perf",
     "demo": "portal:demo"
-  },
-  "dependencies": {
-    "@react-three/fiber": "^6.0.1"
   }
 }
