--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -2,7 +2,7 @@
   "name": "r3f-perf",
   "version": "2.0.1",
   "main": "dist/r3f-perf.cjs.js",
-  "module": "dist/r3f-perf.esm.js",
+  "module": "dist/r3f-perf.cjs.js",
   "types": "dist/r3f-perf.cjs.d.ts",
   "license": "MIT",
   "keywords": [
