added esm and fix type

--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -1,8 +1,8 @@
 {
   "name": "r3f-perf",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "dist/r3f-perf.cjs.js",
-  "module": "dist/r3f-perf.cjs.js",
+  "module": "dist/r3f-perf.esm.js",
   "types": "dist/r3f-perf.cjs.d.ts",
   "license": "MIT",
   "keywords": [
