--- a/package.json
+++ b/package.json
@@ -22,33 +22,25 @@
     "tsc": "tsc --noEmit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --quiet",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "demo:dev": "yarn workspace demo dev",
     "demo:build": "yarn workspace demo build",
-    "demo:serve": "yarn workspace demo serve",
-    "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run"
+    "demo:serve": "yarn workspace demo serve"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/RenaudRohlinger/r3f-perf.git"
   },
   "bugs": "https://github.com/RenaudRohlinger/r3f-perf/issues",
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "three": "*"
-  },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@changesets/cli": "^2.14.1",
-    "@preconstruct/cli": "^2.0.6",
+    "@changesets/cli": "^2.16.0",
+    "@preconstruct/cli": "^2.1.0",
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/fiber": "^6.0.1",
+    "@react-three/fiber": "^6.2.0",
     "@size-limit/preset-big-lib": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -56,7 +48,6 @@
     "@storybook/addon-links": "^6.1.21",
     "@storybook/addon-storysource": "^6.1.21",
     "@storybook/react": "^6.1.21",
-    "@testing-library/cypress": "^7.0.4",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -65,10 +56,8 @@
     "@typescript-eslint/parser": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "concurrently": "^6.0.0",
-    "cypress": "^7.2.0",
     "eslint": "^7.22.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-flowtype": "^5.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -80,7 +69,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "size-limit": "^4.10.1",
-    "start-server-and-test": "^1.12.1",
     "tsd": "^0.14.0",
     "typescript": "^4.2.3",
     "yalc": "^1.0.0-pre.50"
@@ -96,5 +84,9 @@
   "resolutions": {
     "@r3f-perf/root": "portal:/Users/yakuno/Projects/r3f-perf",
     "demo": "portal:demo"
+  },
+  "dependencies": {
+    "@react-three/drei": "^5.1.6",
+    "@types/styled-components": "^5.1.9"
   }
 }
