--- a/demo/package.json
+++ b/demo/package.json
@@ -3,17 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "node server",
+    "build": "yarn build:client && yarn build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
+    "generate": "vite build --outDir dist/static && yarn build:server && node prerender",
+    "serve": "cross-env NODE_ENV=production node server",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
     "@react-three/drei": "^5.1.6",
     "@react-three/fiber": "^6.2.0",
     "@stitches/react": "^0.1.0",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "leva": "^0.8.1",
     "noisejs": "^2.1.0",
+    "path": "^0.12.7",
     "r3f-perf": "workspace:packages/r3f-perf",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
