--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r3f-perf",
-  "version": "4.2.1-alpha",
+  "version": "4.4.0",
   "main": "dist/r3f-perf.cjs.js",
   "module": "dist/r3f-perf.esm.js",
   "types": "dist/r3f-perf.cjs.d.ts",
