--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r3f-perf",
-  "version": "4.9.0",
+  "version": "4.9.1",
   "main": "dist/r3f-perf.cjs.js",
   "module": "dist/r3f-perf.esm.js",
   "types": "dist/r3f-perf.cjs.d.ts",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.1.0",
-    "candygraph": "^0.4.1",
+    "candygraph": "0.3.1",
     "lerp": "^1.0.3",
     "rafz": "^0.1.14",
     "react-icons": "^4.2.0",
