--- a/demo/package.json
+++ b/demo/package.json
@@ -13,27 +13,28 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/drei": "^7.8.0",
-    "@react-three/fiber": "^7.0.6",
+    "@react-three/drei": "^8.10.4",
+    "@react-three/fiber": "^7.0.26",
     "@stitches/react": "^1.1.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "leva": "^0.9.21",
     "noisejs": "^2.1.0",
     "path": "^0.12.7",
     "r3f-perf": "workspace:packages/r3f-perf",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "three": "^0.132.2",
-    "three-stdlib": "^2.4.0",
+    "three": "^0.137.5",
+    "three-stdlib": "^2.8.6",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.2.3",
-    "vite": "2.0.5"
+    "typescript": "^4.5.5",
+    "vite": "^2.8.4"
   }
 }
