--- a/demo/package.json
+++ b/demo/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node server",
+    "dev": "vite dev",
     "build": "yarn build:client && yarn build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/drei": "^8.10.4",
-    "@react-three/fiber": "^7.0.26",
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.0.6",
     "@stitches/react": "^1.1.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
@@ -23,18 +23,18 @@
     "leva": "^0.9.21",
     "noisejs": "^2.1.0",
     "path": "^0.12.7",
-    "r3f-perf": "workspace:packages/r3f-perf",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "^0.137.5",
-    "three-stdlib": "^2.8.6",
+    "r3f-perf": "*",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "three": "^0.139.2",
+    "three-stdlib": "^2.8.12",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.5.5",
-    "vite": "^2.8.4"
+    "vite": "^2.9.1"
   }
 }
