--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r3f-perf",
-  "version": "5.5.0",
+  "version": "6.0.0",
   "main": "dist/r3f-perf.cjs.js",
   "module": "dist/r3f-perf.esm.js",
   "types": "dist/r3f-perf.cjs.d.ts",
@@ -27,19 +27,20 @@
     ]
   },
   "peerDependencies": {
+    "@react-three/drei": "*",
     "@react-three/fiber": "*",
-    "react": ">=17.0",
-    "react-dom": ">=17.0",
+    "react": ">=18.0",
+    "react-dom": ">=18.0",
     "three": ">=0.137",
     "three-stdlib": "*"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.3",
-    "@react-three/drei": "^8.16.4",
-    "@react-three/fiber": "^7.0.26",
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.0.6",
     "@stitches/react": "^1.2.6",
-    "three": "^0.138.3",
-    "three-stdlib": "^2.8.8",
+    "three": "^0.139.2",
+    "three-stdlib": "^2.8.12",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
