--- a/demo/package.json
+++ b/demo/package.json
@@ -26,8 +26,8 @@
     "r3f-perf": "*",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "three": "^0.143.0",
-    "three-stdlib": "^2.12.1",
+    "three": "latest",
+    "three-stdlib": "^2.16.1",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
