--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^1.3.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "three": "latest",
     "three-stdlib": "^2.20.5"
   }
