--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,19 @@
 name: CI
 on:
   push:
-    paths:
-      - '.github/**'
-      - 'packages/**'
-      - '!demo/**'
-      - '!docs/**'
-      - '!**.md'
-      - '!.changeset/**'
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
   build:
-    name: Build, lint, and test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
-      - name: Use Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
 
       - name: Install dependencies
         run: yarn --silent
 
-      - name: Check types
-        run: yarn tsc
-
-      - uses: actions/cache@v2
-        name: Setup Yarn build cache
-        id: yarn-build-cache
-        with:
-          path: packages/**/dist
-          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-build-
-
-      - name: Yarn build without cache
-        if: steps.yarn-build-cache.outputs.cache-hit != 'true'
+      - name: Build
         run: yarn build
