--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
-
 {
-  "singleQuote": true
+  "semi": false,
+  "trailingComma": "es5",
+  "singleQuote": true,
+  "jsxBracketSameLine": true,
+  "tabWidth": 2,
+  "printWidth": 120
 }
